# ChessGame

./: .gitignore  CMakeLists.txt  README.md  README_BUILD.md  build-dynamic.bat  build.bat  build_windows.sh  compile.sh  example.cpp  main.cpp
controller/: GameController.cpp  SaveLoadManager.cpp
include/: AIPlayer.h  AssetManager.h  Board.h  BoardView.h  GameController.h  GameState.h  MenuView.h  Move.h  MoveGenerator.h  Piece.h  Position.h  SaveLoadManager.h  UIView.h
model/: AIPlayer.cpp  Board.cpp  GameState.cpp  Move.cpp  MoveGenerator.cpp  Piece.cpp  Position.cpp
src/: AIPlayer.cpp  Board.cpp  GameState.cpp  Move.cpp  MoveGenerator.cpp  Piece.cpp  Position.cpp  main.cpp
view/: AssetManager.cpp  BoardView.cpp  MenuView.cpp  UIView.cpp
